[package]
name = "example-impl"
version = "0.1.0"
authors = ["Michal Srb <xixixao@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot-reloaded-state = { path = "../hot-reloaded-state" }
rand = "0.8.0"
signal-hook = "0.3.2"