[package]
name = "hot-reload"
version = "0.1.0"
authors = ["Michal Srb <xixixao@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_memory = { git = "https://github.com/xixixao/shared_memory-rs" , branch = "patch-1" }
raw_sync = "0.1.5"
