[package]
name = "hot-reloaded-state"
version = "0.1.0"
authors = ["Michal Srb <xixixao@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
enabled = ["hot-reload/enabled"]

[dependencies]
hot-reload = { path = "../hot-reload" }
serde = "1.0.118"
arraystring = "0.3.0"